--- a/gallery.css
+++ b/gallery.css
@@ -2,13 +2,14 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: rgb(198, 128, 255);
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: rgb(183, 0, 255);
     padding: 10px 20px;
 }
 
@@ -20,9 +21,13 @@ body {
 }
 
 .navbar-brand {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     font-size: 24px;
+}
+.navbar-brand:hover {
+    background-color: rgb(173, 76, 255);
+    border-radius: 5px;
 }
 
 .navbar-links {
@@ -30,7 +35,7 @@ body {
 }
 
 .nav-link {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     margin: 0 10px;
     padding: 5px 10px;
@@ -38,7 +43,8 @@ body {
 }
 
 .nav-link:hover {
-    background-color: #555;
+    background-color: rgb(173, 76, 255);
+    border-radius: 5px;
 }
 
 .content {
@@ -46,33 +52,6 @@ body {
     text-align: center;
 }
 
-.auth-container {
-    width: 300px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: left;
-}
-
-form {
-    display: block;
-    margin-bottom: 20px;
-}
-
-.register-link {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.register-link:hover {
-    background-color: #0056b3;
-}
 
 #gallery {
     display: flex;
@@ -98,10 +77,15 @@ form {
 }
 
 .pagination button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    font-size: 16px;
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #d900ff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
-.gallery:hover {
-    transform: translateY(-5px);
+
+.pagination button:hover {
+    background-color: #9d00ff;
 }
