--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: rgb(198, 128, 255);
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: rgb(183, 0, 255);
     padding: 10px 20px;
 }
 
@@ -20,9 +21,13 @@ body {
 }
 
 .navbar-brand {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     font-size: 24px;
+}
+.navbar-brand:hover {
+    background-color: rgb(173, 76, 255);
+    border-radius: 5px;
 }
 
 .navbar-links {
@@ -30,15 +35,15 @@ body {
 }
 
 .nav-link {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     margin: 0 10px;
     padding: 5px 10px;
     transition: background-color 0.3s;
 }
-
 .nav-link:hover {
-    background-color: #555;
+    background-color: rgb(173, 76, 255);
+    border-radius: 5px;
 }
 
 .content {
@@ -46,11 +51,22 @@ body {
     text-align: center;
 }
 
+
+
+.capybara-text {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.main-image {
+    max-width: 800px;
+    border-radius: 10px;
+}
+
 .auth-container {
     width: 300px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 5px;
     text-align: left;
 }
@@ -62,14 +78,56 @@ form {
 
 .register-link {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
+    padding: 10px 10px;
+    background-color: #a600ff;
     color: white;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
+.login1 {
+    padding: 10px 20px;
+    color: white;
+    border-radius: 5px;
+}
+.login2 {
+    border-radius: 5px;
+}
+.login3 {
+    display: inline-block;
+    margin-top: 3%;
+    padding: 10px 10px;
+    color: white;
+    border-radius: 5px;
+}
+.login4 {
+    border-radius: 5px;
+}
+.login5 {
+    display: inline-block;
+    padding: 10px 10px;
+    color: white;
+    border-radius: 5px;
+}
+.login6 {
+    padding: 10px 10px;
+    background-color: #a600ff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.login7 {
+    padding: 10px 10px;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
 .register-link:hover {
-    background-color: #0056b3;
+    background-color: #9d00ff;
+}
+.login6:hover {
+    background-color: #9d00ff;
 }
